--- a/templates/base.html
+++ b/templates/base.html
@@ -7,19 +7,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Saadhan by r/developersIndia</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" />
+  <style>
+    a {
+      color: #E4376D;
+    }
+  </style>
 </head>
 
 <body>
   <div class="container">
-    <h1 class="content is-large">What do you wanna learn today ?</h1>
+    <h1 class="title is-1 is-center">Saadhan - Resource hub by <a
+        href="https://reddit.com/r/developersIndia">r/developersIndia</a> community</h1>
   </div>
 
-  {% for category, link in categories.items() %}
-  <a class="button is-medium" href="/resources?category={{ link }}">{{category}}</a>
-  {% endfor %}
 
+  <div class="container is-centered">
+    {% block content %}
+    {% endblock content %}
+  </div>
+  <footer class="footer">
+    <div class="content has-text-centered">
+      <p>
+        <strong>Saadhan</strong> by <a href="https://reddit.com/r/developersIndia">r/developersIndia</a>. The source
+        code is licensed
+        <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+        is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+      </p>
+    </div>
+  </footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/randomcolor/0.5.4/randomColor.min.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   <script src="https://unpkg.com/htmx.org@1.7.0"></script>
+  <script type="text/javascript">
+    var categories = document.getElementsByClassName("category_name");
+    for (var category = 0; category < categories.length; category++) {
+      categories[category].style.backgroundColor = randomColor({ luminosity: 'light' });
+    }
+  </script>
 </body>
 
 </html>
