♻️ a lot of changes
- use requests & cache network requests
- add basic navbar
- add tweet share link

--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,14 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="container is-centered column">
-    <!-- <div class="column"> -->
-    <h2 class="title is-2">What do you wanna learn today?</h2>
-    <!-- </div> -->
+<div class="content is-vcentered has-text-centered">
+    <h2 class="title is-3">What do you wanna learn today?</h2>
 </div>
 
 <div class="container" id="categories">
     {% for category, link in categories.items() %}
-    <a style="margin: 1%" class="category_name button is-medium" id="category_name" href="/resources?category={{ link }}">{{category}}</a>
+    <a style="margin: 1%" class="category_name button is-medium" id="category_name"
+        href="/resources?category={{ link }}">{{category}}</a>
     {% endfor %}
 </div>
 
