--- a/templates/base.html
+++ b/templates/base.html
@@ -15,13 +15,52 @@
 </head>
 
 <body>
-  <div class="container">
-    <h1 class="title is-1 is-center">Saadhan - Resource hub by <a
-        href="https://reddit.com/r/developersIndia">r/developersIndia</a> community</h1>
+
+  <nav class="navbar" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+      <!-- <a class="navbar-item" href="https://bulma.io">
+        <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+      </a> -->
+  
+      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+      </a>
+    </div>
+  
+    <div id="navbarBasicExample" class="navbar-menu">
+      <div class="navbar-start">
+        <a href="/" class="navbar-item">
+          Home
+        </a>
+  
+        <a href="https://github.com/developersIndia/saadhan" class="navbar-item">
+          Report an issue 🐞
+        </a>
+      </div>
+  
+      <div class="navbar-end">
+        <div class="navbar-item">
+          <div class="buttons">
+            <a style="background-color: #E4376D;" href="https://reddit.com/r/developersIndia" class="button is-primary">
+              <strong>Join Us</strong>
+            </a>
+            <a href="https://discord.gg/MKXMSNC" class="button is-light">
+              Chat
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+  <div class="content is-vcentered has-text-centered">
+    <h1 class="title is-2 is-center">saadhan - resource hub by <a
+        href="https://reddit.com/r/developersIndia">r/developersIndia</a></h1>
   </div>
-
-
-  <div class="container is-centered">
+  
+  <div class="container">
     {% block content %}
     {% endblock content %}
   </div>
