--- a/templates/resources.html
+++ b/templates/resources.html
@@ -11,10 +11,10 @@
             <div class="content">
                 <p class="title is-4">{{res.title}}</p>
             </div>
-
+            <span class="tag is-danger">{{res.level}}</span>
             <footer class="card-footer">
-                <a href="#" class="card-footer-item">Copy link</a>
-                <a href="#" class="card-footer-item">Tweet</a>
+                <a href="#" class="card-footer-item">Copy Link</a>
+                <a target="_blank" href="http://twitter.com/share?text=Hey, checkout this resource {{res.title}} via saadhan.devsindia.in&url={{res.url}}&hashtags=devsindia" class="card-footer-item">Tweet</a>
             </footer>
         </div>
     </div>
