--- a/templates/resources.html
+++ b/templates/resources.html
@@ -3,10 +3,10 @@
 {% block content %}
 
 <div class="container">
-    <p class="title is-5">{{category}}</p>
+    <p class="subtitle is-3 content is-vcentered has-text-centered">All resources to learn {{category}}</p>
 
-    <div class="columns">
-        <div class="column">
+    <div style="margin-left: 0.3rem;" class="columns is-mobile is-centered">
+        <div class="column is-half">
             <p class="subtitle is-4">Filter by level</p>
             <div class="control">
                 <div class="select">
@@ -26,7 +26,7 @@
             </div>
         </div>
 
-        <div class="column">
+        <div class="column is-half">
             <p class="subtitle is-4">Filter by type</p>
             <div class="control">
                 <div class="select">
