add more header links

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,13 +44,15 @@
           Home
         </a>
         <a href="/" class="navbar-item">
-          About
+          How to contribute
+        </a>
+        <a href="/" class="navbar-item">
         </a>
         <a href="/contributors" class="navbar-item">
           Contributors
         </a>
-        <a href="https://github.com/developersIndia/saadhan/issues/new/choose" class="navbar-item">
-          Report an issue 🐞
+        <a href="/" class="navbar-item">
+          Wiki
         </a>
       </div>
   
@@ -81,7 +83,7 @@
   <footer class="footer">
     <div class="content has-text-centered">
       <p>
-        <strong>Saadhan</strong> by <a href="https://reddit.com/r/developersIndia">r/developersIndia</a>. The source
+        <strong>Saadhan</strong> by <a href="https://developersindia.in/">r/developersIndia</a>. The source
         code is licensed
         <a href="https://github.com/developersIndia/saadhan/blob/main/LICENSE">GPL v3.0</a>. The website content
         is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
