Changed Copy Link to Open Link

--- a/templates/resources.html
+++ b/templates/resources.html
@@ -51,7 +51,7 @@
                 </div>
                 <span class="tag is-danger">{{res.level}}</span>
                 <footer class="card-footer">
-                    <a href="#" class="card-footer-item">Copy Link</a>
+                    <a href={{res.url}} class="card-footer-item" rel="noreferrer noopener" target="_blank">Open Link</a>
                     <a target="_blank"
                         href="http://twitter.com/share?text=Hey, checkout this resource {{res.title}} via saadhan.devsindia.in&url={{res.url}}&hashtags=devsindia"
                         class="card-footer-item">Tweet</a>
