--- a/templates/filtered_resources.html
+++ b/templates/filtered_resources.html
@@ -5,8 +5,9 @@
             <p class="title is-4">{{res.title}}</p>
         </div>
         <span class="tag is-danger">{{res.level}}</span>
+        <span class="tag is-danger">{{res.type}}</span>
         <footer class="card-footer">
-            <a href="#" class="card-footer-item">Copy Link</a>
+                <a href={{res.url}} class="card-footer-item" rel="noreferrer noopener" target="_blank">Open Link</a>
             <a target="_blank"
                 href="http://twitter.com/share?text=Hey, checkout this resource {{res.title}} via saadhan.devsindia.in&url={{res.url}}&hashtags=devsindia"
                 class="card-footer-item">Tweet</a>
