--- a/templates/resources.html
+++ b/templates/resources.html
@@ -50,6 +50,7 @@
                     <p class="title is-4">{{res.title}}</p>
                 </div>
                 <span class="tag is-danger">{{res.level}}</span>
+                <span class="tag is-danger">{{res.type}}</span>
                 <footer class="card-footer">
                     <a href={{res.url}} class="card-footer-item" rel="noreferrer noopener" target="_blank">Open Link</a>
                     <a target="_blank"
