--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,12 @@
     .grid-container.grid-repeat-5 {
       grid-template-columns: repeat(5, 1fr);
     }
-  
+    .footer{
+      position: fixed;
+      bottom: 0;
+      height: fit-content;
+      width: 100%;
+    }
   </style>
   <script src="https://unpkg.com/htmx.org@1.8.4"></script>
 </head>
