--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,11 @@
     .grid-container.grid-repeat-5 {
       grid-template-columns: repeat(5, 1fr);
     }
+    .footer {
+    position: relative;
+    bottom: 0;
+    width: 100%;
+  }
   
   </style>
   <script src="https://unpkg.com/htmx.org@1.8.4"></script>
