--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,25 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" />
   <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/developersIndia/assets/main/favicons/favicon.ico">
   <style>
+    html{
+      height: 100%;
+      box-sizing: border-box;
+    }
+    body{
+      margin: 0;
+      position: relative;
+      min-height: 100%;
+      padding-bottom: 6rem;
+    }
+    footer{
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      left: 0;
+    }
+    .container{
+      flex: 1;
+    }
     a {
       color: #E4376D;
     }
@@ -19,18 +38,12 @@
     .grid-container.grid-repeat-5 {
       grid-template-columns: repeat(5, 1fr);
     }
-    .footer{
-      position: fixed;
-      bottom: 0;
-      height: fit-content;
-      width: 100%;
-    }
   </style>
   <script src="https://unpkg.com/htmx.org@1.8.4"></script>
 </head>
 
 <body>
-
+  <div>
   <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <!-- <a class="navbar-item" href="https://bulma.io">
@@ -76,16 +89,15 @@
       </div>
     </div>
   </nav>
-
-  <div class="content is-vcentered has-text-centered">
-    <h1 class="title is-2 is-center">saadhan - resource hub by <a
-        href="https://reddit.com/r/developersIndia">r/developersIndia</a></h1>
-  </div>
-  
-  <div class="container">
-    {% block content %}
-    {% endblock content %}
-  </div>
+    <div class="content is-vcentered has-text-centered">
+      <h1 class="title is-2 is-center">saadhan - resource hub by <a
+          href="https://reddit.com/r/developersIndia">r/developersIndia</a></h1>
+    </div>
+    
+    <div class="container">
+      {% block content %}
+      {% endblock content %}
+    </div>
   <footer class="footer">
     <div class="content has-text-centered">
       <p>
