fix footer to stick to bottom

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,11 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" />
   <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/developersIndia/assets/main/favicons/favicon.ico">
   <style>
+    body{
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
     a {
       color: #E4376D;
     }
@@ -19,6 +24,10 @@
     .grid-container.grid-repeat-5 {
       grid-template-columns: repeat(5, 1fr);
     }
+
+    .footer{
+      justify-self: flex-end;
+     }
   
   </style>
   <script src="https://unpkg.com/htmx.org@1.8.4"></script>
