fix: add wiki link

--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,7 @@
         <a href="/contributors" class="navbar-item">
           Contributors
         </a>
-        <a href="/" class="navbar-item">
+        <a href="https://wiki.developersindia.in/" class="navbar-item">
           Wiki
         </a>
       </div>
