--- a/templates/filtered_resources.html
+++ b/templates/filtered_resources.html
@@ -1,3 +1,4 @@
+{% if resources|length > 1 %}
 {% for res in resources %}
 <div class="card">
     <div class="card-content">
@@ -7,7 +8,7 @@
         <span class="tag is-danger">{{res.level}}</span>
         <span class="tag is-danger">{{res.type}}</span>
         <footer class="card-footer">
-                <a href={{res.url}} class="card-footer-item" rel="noreferrer noopener" target="_blank">Open Link</a>
+            <a href={{res.url}} class="card-footer-item" rel="noreferrer noopener" target="_blank">Open Link</a>
             <a target="_blank"
                 href="http://twitter.com/share?text=Hey, checkout this resource {{res.title}} via saadhan.devsindia.in&url={{res.url}}&hashtags=devsindia"
                 class="card-footer-item">Tweet</a>
@@ -15,3 +16,13 @@
     </div>
 </div>
 {% endfor %}
+{% else %}
+<div class="columns is-centered mt-4">
+    <div class="column is-half-desktop">
+        <figure class="image">
+            <img alt="No data to display" src={{ url_for('static', filename='assets/svgs/no-data-illustration.svg' ) }}>
+        </figure>
+        <p class="has-text-centered mt-4">No data to display</p>
+    </div>
+</div>
+{% endif %}
